<resources>
    <string name="app_name">Warwick Browser</string>
    <string name="title_activity_module_web_view">ModuleWebView</string>
    <string name="add_module_button_text">Add Module</string>
    <string name="my_warwick_button">My Warwick</string>
    <string name="write_ext_storage_request">This app requires the Write External Storage permission to download files.</string>
    <string name="give_permission">Give Permission</string>
    <string name="module_name_suggestion">Module Name (e.g. CS126, ES193)</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="add_module_link_option">ADD</string>
    <string name="link_name_title">Link Name</string>
    <string name="link_target_title">Link Target</string>
    <string name="link_name_hint">Name</string>
    <string name="link_target_hint">Link</string>
    <string name="add_module">Add Module</string>

    <string name="old_file_name">Original Name</string>
    <string name="new_file_name">New Name</string>
    <string name="new_name_target_hint">New Name</string>
    <string name="set_description">Set Description</string>
    <string name="add_link_browser">Add Link from Browser</string>
    <string name="add_link_manual">Add Link Directly</string>
    <string name="delete_module">Delete Module</string>
    <string name="sort_by">Sort By&#8230;</string>
    <string name="new_description">New Description</string>
    <string name="new_description_hint">New Description</string>
</resources>
