<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/old_file_name" />

    <TextView
        android:id="@+id/old_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/link_name_hint"
        android:importantForAutofill="no"
        android:inputType="textAutoCorrect|textAutoComplete"
        android:paddingStart="3dp"
        android:paddingTop="5dp"
        android:paddingBottom="3dp"
        android:textSize="16sp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/new_file_name" />

    <EditText
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/new_name_target_hint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textUri"
        tools:targetApi="o" />
</LinearLayout>